libobs/util:  Remove dup. code, add os_opendir
Just use platform-nix.c code for general stuff that mac is compliant
with, and put a define around everything else.  Take that code out of
platform-cocoa.m.

Added os_opendir, os_readdir, and os_closedir to be able to query
available files within a directory.

--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -30,6 +30,7 @@ elseif(APPLE)
 	set(libobs_PLATFORM_SOURCES
 		obs-cocoa.c
 		util/threading-posix.c
+		util/platform-nix.c
 		util/platform-cocoa.m)
 
 	set_source_files_properties(${libobs_PLATFORM_SOURCES}
