Add FLV file output code
This doesn't add FLV file output to the user interface yet, but we'll
get around to that eventually.  This just adds an FLV output type.

Also, removed ftello/fseeko because off_t is a really annoying data
type, and I'd rather have a firm int64_t for large sizes, so I named it
to os_fseeki64 and os_ftelli64 instead, and changed the file size
function to return an int64_t.

--- a/vs/2013/obs-outputs/obs-outputs.vcxproj.filters
+++ b/vs/2013/obs-outputs/obs-outputs.vcxproj.filters
@@ -98,5 +98,8 @@
     <ClCompile Include="..\..\..\plugins\obs-outputs\librtmp\log.c">
       <Filter>librtmp\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\plugins\obs-outputs\flv-output.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
