--- a/vs/2013/obs-outputs/obs-outputs.vcxproj
+++ b/vs/2013/obs-outputs/obs-outputs.vcxproj
@@ -180,6 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\plugins\obs-outputs\flv-mux.c" />
+    <ClCompile Include="..\..\..\plugins\obs-outputs\flv-output.c" />
     <ClCompile Include="..\..\..\plugins\obs-outputs\librtmp\amf.c" />
     <ClCompile Include="..\..\..\plugins\obs-outputs\librtmp\cencode.c" />
     <ClCompile Include="..\..\..\plugins\obs-outputs\librtmp\hashswf.c" />
