Fix ffmpeg/x264 find modules according to cmake find module naming conventions

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,6 @@
 *.vcxproj         text eol=crlf
 *.vcxproj         text eol=crlf
 *.vcxproj.filters text eol=crlf
+
+cmake/ALL_BUILD.vcxproj.user.in text eol=crlf
+
