--- a/libobs/CMakeLists.txt
+++ b/libobs/CMakeLists.txt
@@ -1,20 +1,20 @@
 project(libobs)
 
 find_package(Libswscale REQUIRED)
-include_directories(${Libswscale_INCLUDE_DIR})
-add_definitions(${Libswscale_DEFINITIONS})
+include_directories(${LIBSWSCALE_INCLUDE_DIRS})
+add_definitions(${LIBSWSCALE_DEFINITIONS})
 
 find_package(Libswresample REQUIRED)
-include_directories(${Libswresample_INCLUDE_DIR})
-add_definitions(${Libswresample_DEFINITIONS})
+include_directories(${LIBSWRESAMPLE_INCLUDE_DIRS})
+add_definitions(${LIBSWRESAMPLE_DEFINITIONS})
 
 find_package(Libavutil REQUIRED)
-include_directories(${Libavutil_INCLUDE_DIR})
-add_definitions(${Libavutil_DEFINITIONS})
+include_directories(${LIBAVUTIL_INCLUDE_DIRS})
+add_definitions(${LIBAVUTIL_DEFINITIONS})
 
 find_package(Libavformat REQUIRED)
-include_directories(${Libavformat_INCLUDE_DIR})
-add_definitions(${Libavformat_DEFINITIONS})
+include_directories(${LIBAVFORMAT_INCLUDE_DIRS})
+add_definitions(${LIBAVFORMAT_DEFINITIONS})
 
 add_definitions(-DLIBOBS_EXPORTS)
 
@@ -235,11 +235,11 @@ target_link_libraries(libobs
 	PRIVATE
 		jansson
 		${libobs_PLATFORM_DEPS}
-		${Libswscale_LIBRARIES}
-		${Libswresample_LIBRARIES}
-		${Libavutil_LIBRARIES})
+		${LIBSWSCALE_LIBRARIES}
+		${LIBSWRESAMPLE_LIBRARIES}
+		${LIBAVFORMAT_LIBRARIES}
+		${LIBAVUTIL_LIBRARIES})
 
 install_obs_core(libobs EXPORT LibObs)
 install_obs_data(libobs ../build/data/libobs libobs)
 install_obs_headers(${libobs_HEADERS})
-
