--- a/plugins/obs-x264/CMakeLists.txt
+++ b/plugins/obs-x264/CMakeLists.txt
@@ -1,8 +1,8 @@
 project(obs-x264)
 
 find_package(Libx264 REQUIRED)
-include_directories(${Libx264_INCLUDE_DIR})
-add_definitions(${Libx264_DEFINITIONS})
+include_directories(${LIBX264_INCLUDE_DIRS})
+add_definitions(${LIBX264_DEFINITIONS})
 
 set(obs-x264_SOURCES
 	obs-x264.c
@@ -12,7 +12,7 @@ add_library(obs-x264 MODULE
 	${obs-x264_SOURCES})
 target_link_libraries(obs-x264
 	libobs
-	${Libx264_LIBRARIES})
+	${LIBX264_LIBRARIES})
 
 install_obs_plugin(obs-x264)
 
